--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ repositories {
 }
 
 javafx {
-	version = "17.0.2"
-	modules = [ 'javafx.controls', 'javafx.fxml' ]
+	version = "18.0.1"
+	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
 }
 
 dependencies {
@@ -23,8 +23,11 @@ dependencies {
 
 	implementation 'net.rgielen:javafx-weaver-spring-boot-starter:1.3.0'
 
-	implementation 'org.openjfx:javafx-controls:17.0.2'
-	implementation 'org.openjfx:javafx-fxml:17.0.2'
+	implementation 'org.openjfx:javafx-controls:18.0.1'
+	implementation 'org.openjfx:javafx-fxml:18.0.1'
+	implementation 'org.openjfx:javafx-swing:18.0.1'
+
+	implementation 'com.github.sarxos:webcam-capture:0.3.12'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
