--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id("org.openjfx.javafxplugin") version "0.0.11"
+	id 'org.openjfx.javafxplugin' version "0.0.11"
 	id 'application'
 	id 'jacoco'
 }
