--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'org.openjfx.javafxplugin' version "0.0.11"
 	id 'application'
 	id 'jacoco'
+	id 'checkstyle'
 }
 
 group = 'com.example'
