--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 
 	implementation 'com.github.sarxos:webcam-capture:0.3.12'
 
+	implementation 'org.python:jython-standalone:2.+'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.assertj:assertj-core:3.6.1'
 	testImplementation "org.mockito:mockito-core:3.+"
