--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,11 @@ dependencies {
 
 	implementation 'com.github.sarxos:webcam-capture:0.3.12'
 
+	implementation 'net.sourceforge.tess4j:tess4j:5.2.1'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.assertj:assertj-core:3.6.1'
-	testImplementation "org.mockito:mockito-core:3.+"
+	testImplementation 'org.assertj:assertj-core:3.23.1'
+	testImplementation 'org.mockito:mockito-core:4.6.1'
 }
 
 tasks.named('test') {
